--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@ hljs.initHighlightingOnLoad();
 </script>
 
 <!-- MathJax scripts -->
-<script type="text/javascript" src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+<script type="text/javascript">MathJax.Hub.Config({tex2jax: {processEscapes: true,
+  processEnvironments: false, inlineMath: [ ['$','$'] ], 
+  displayMath: [ ['$$','$$'] ] }, 
+  asciimath2jax: {delimiters: [ ['$','$'] ] }, 
+  "HTML-CSS": {minScaleAdjust: 125 } });
 </script>
 
 
@@ -218,17 +224,16 @@ plot(x)
 ## [1] graphics  grDevices utils     datasets  methods   stats     base     
 ## 
 ## other attached packages:
-## [1] knitrBootstrap_0.9.0  knitr_1.5             ggplot2_0.9.3.1      
+## [1] markdown_0.6.4        knitr_1.5             ggplot2_0.9.3.1      
 ## [4] ProjectTemplate_0.3-2 yaml_2.1.11           testthat_0.8.1       
 ## 
 ## loaded via a namespace (and not attached):
 ##  [1] colorspace_1.2-4   dichromat_2.0-0    digest_0.6.4      
 ##  [4] evaluate_0.5.3     formatR_0.10       grid_3.0.2        
-##  [7] gtable_0.1.2       labeling_0.2       markdown_0.6.4    
-## [10] MASS_7.3-31        munsell_0.4.2      plyr_1.8.1        
-## [13] proto_0.3-10       RColorBrewer_1.0-5 Rcpp_0.11.1       
-## [16] reshape2_1.2.2     scales_0.2.3       stringr_0.6.2     
-## [19] tools_3.0.2
+##  [7] gtable_0.1.2       labeling_0.2       MASS_7.3-31       
+## [10] munsell_0.4.2      plyr_1.8.1         proto_0.3-10      
+## [13] RColorBrewer_1.0-5 Rcpp_0.11.1        reshape2_1.2.2    
+## [16] scales_0.2.3       stringr_0.6.2      tools_3.0.2
 </code></pre>
 
 </body>
